Restyled badges view and fixed Firefox button spacing issue in the askbot comments form

--- a/sass/discussion/_question-view.scss
+++ b/sass/discussion/_question-view.scss
@@ -185,6 +185,11 @@ div.question-header {
 
         form.post-comments {
           padding: 15px;
+
+           button:last-child {
+            margin-left: 10px;
+            @extend .light-button;
+          }
         }
 
         div.comment {
